# static-site-generator

./: .gitignore  CMakeLists.txt  Makefile  README.md
docs/: ssg.1
include/: XMLNode.hpp  sitetree.hpp
src/: CMakeLists.txt  XMLNode.cpp  main.cpp  sitetree.cpp
tests/: CMakeLists.txt  sitetree_test.cpp
